--- a/index.html
+++ b/index.html
@@ -5,7 +5,37 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Your HTML content goes here -->
+  <header>
+    <h1>Time Clock System</h1>
+  </header>
+
+  <main>
+    <section id="login-section">
+      <h2>Login</h2>
+      <form id="login-form">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+
+        <button type="submit">Login</button>
+      </form>
+    </section>
+
+    <section id="dashboard-section" style="display: none;">
+      <h2>Dashboard</h2>
+      <p>Welcome, <span id="employee-name"></span>!</p>
+      <button id="clock-in-btn">Clock In</button>
+      <button id="clock-out-btn">Clock Out</button>
+      <button id="logout-btn">Logout</button>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Time Clock System. All rights reserved.</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
