--- a/index.html
+++ b/index.html
@@ -52,3 +52,29 @@
   <script src="script.js"></script>
 </body>
 </html>
+<section id="employee-section">
+  <!-- Employee-specific features -->
+  <textarea id="comment-input" placeholder="Enter a comment"></textarea>
+  <select id="work-type-select">
+    <!-- Work type options -->
+  </select>
+  <!-- ... -->
+</section>
+
+<section id="supervisor-section">
+  <!-- Supervisor-specific features -->
+  <!-- Timecard review and approval -->
+  <!-- ... -->
+</section>
+
+<section id="admin-section">
+  <!-- Admin-specific features -->
+  <!-- Manage work types -->
+  <!-- ... -->
+</section>
+
+<section id="reporting-section">
+  <!-- Reporting features -->
+  <!-- Filters and data visualization -->
+  <!-- ... -->
+</section>
