--- a/index.html
+++ b/index.html
@@ -23,8 +23,40 @@
       </form>
     </section>
 
-    <section id="dashboard-section" style="display: none;">
-      <h2>Dashboard</h2>
+    <section id="admin-section" style="display: none;">
+      <h2>Admin Dashboard</h2>
+      <form id="employee-form">
+        <input type="text" id="employee-name" placeholder="Employee Name" required>
+        <input type="text" id="employee-username" placeholder="Username" required>
+        <input type="password" id="employee-password" placeholder="Password" required>
+        <input type="text" id="employee-location" placeholder="Location" required>
+        <input type="text" id="employee-department" placeholder="Department" required>
+        <input type="text" id="employee-id" placeholder="Employee ID" required>
+        <select id="employee-access">
+          <option value="employee">Employee</option>
+          <option value="supervisor">Supervisor</option>
+          <option value="admin">Admin</option>
+        </select>
+        <button type="submit">Add Employee</button>
+      </form>
+      <table id="employee-table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Username</th>
+            <th>Location</th>
+            <th>Department</th>
+            <th>Employee ID</th>
+            <th>Access Level</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </section>
+
+    <section id="employee-section" style="display: none;">
+      <h2>Employee Dashboard</h2>
       <p>Welcome, <span id="employee-name"></span>!</p>
       <p>Current Time: <span id="current-time"></span></p>
       <select id="time-zone-select">
@@ -34,6 +66,11 @@
         <option value="America/Denver">Mountain Time (US & Canada)</option>
         <option value="America/Los_Angeles">Pacific Time (US & Canada)</option>
       </select>
+      <select id="working-status">
+        <option value="working">Working</option>
+        <option value="off">Off</option>
+        <option value="leave">Leave</option>
+      </select>
       <button id="clock-in-btn">Clock In</button>
       <button id="clock-out-btn">Clock Out</button>
       <button id="start-break-btn">Start Break</button>
@@ -41,7 +78,26 @@
       <button id="start-lunch-btn">Start Lunch</button>
       <button id="end-lunch-btn">End Lunch</button>
       <button id="logout-btn">Logout</button>
+      <textarea id="comment-input" placeholder="Enter a comment"></textarea>
       <div id="time-entries"></div>
+      <div id="timecard">
+        <table>
+          <thead>
+            <tr>
+              <th>Monday</th>
+              <th>Tuesday</th>
+              <th>Wednesday</th>
+              <th>Thursday</th>
+              <th>Friday</th>
+              <th>Saturday</th>
+              <th>Sunday</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Timecard entries will be dynamically added here -->
+          </tbody>
+        </table>
+      </div>
     </section>
   </main>
 
@@ -52,29 +108,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-<section id="employee-section">
-  <!-- Employee-specific features -->
-  <textarea id="comment-input" placeholder="Enter a comment"></textarea>
-  <select id="work-type-select">
-    <!-- Work type options -->
-  </select>
-  <!-- ... -->
-</section>
-
-<section id="supervisor-section">
-  <!-- Supervisor-specific features -->
-  <!-- Timecard review and approval -->
-  <!-- ... -->
-</section>
-
-<section id="admin-section">
-  <!-- Admin-specific features -->
-  <!-- Manage work types -->
-  <!-- ... -->
-</section>
-
-<section id="reporting-section">
-  <!-- Reporting features -->
-  <!-- Filters and data visualization -->
-  <!-- ... -->
-</section>
