--- a/index.html
+++ b/index.html
@@ -189,47 +189,60 @@
   <section id="admin-dashboard" class="dashboard" style="display: none;">
     <h2>Admin Dashboard</h2>
     
-    <!-- Employee Management -->
-    <div class="card">
-      <h3>Employee Management</h3>
-      <form id="employee-form">
-        <input type="text" id="employee-name" placeholder="Name" required>
-        <input type="text" id="employee-username" placeholder="Username" required>
-        <input type="password" id="employee-password" placeholder="Password" required>
-        <input type="text" id="employee-id" placeholder="Employee ID" required>
-        <select id="employee-role" required>
-          <option value="">Select Role</option>
-          <option value="employee">Employee</option>
-          <option value="supervisor">Supervisor</option>
-          <option value="admin">Admin</option>
-        </select>
-        <select id="employee-state" required>
-          <option value="">Select State</option>
-          <option value="California">California</option>
-          <option value="Oregon">Oregon</option>
-          <option value="Washington">Washington</option>
-          <option value="Nevada">Nevada</option>
-          <option value="Idaho">Idaho</option>
-          <option value="Montana">Montana</option>
-          <option value="Wyoming">Wyoming</option>
-          <option value="Colorado">Colorado</option>
-        </select>
-        <button type="submit" class="btn">Add Employee</button>
-      </form>
-      <table id="employee-table">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Username</th>
-            <th>Employee ID</th>
-            <th>Role</th>
-            <th>State</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
+<!-- Employee Management -->
+<div class="card">
+  <h3>Employee Management</h3>
+  <form id="employee-form">
+    <label for="employee-name">Name:</label>
+    <input type="text" id="employee-name" placeholder="Name" required>
+
+    <label for="employee-username">Username:</label>
+    <input type="text" id="employee-username" placeholder="Username" required>
+
+    <label for="employee-password">Password:</label>
+    <input type="password" id="employee-password" placeholder="Password" required>
+
+    <label for="employee-id">Employee ID:</label>
+    <input type="text" id="employee-id" placeholder="Employee ID" required>
+
+    <label for="employee-role">Role:</label>
+    <select id="employee-role" required>
+      <option value="">Select Role</option>
+      <option value="employee">Employee</option>
+      <option value="supervisor">Supervisor</option>
+      <option value="admin">Admin</option>
+    </select>
+
+    <label for="employee-state">State:</label>
+    <select id="employee-state" required>
+      <option value="">Select State</option>
+      <option value="California">California</option>
+      <option value="Oregon">Oregon</option>
+      <option value="Washington">Washington</option>
+      <option value="Nevada">Nevada</option>
+      <option value="Idaho">Idaho</option>
+      <option value="Montana">Montana</option>
+      <option value="Wyoming">Wyoming</option>
+      <option value="Colorado">Colorado</option>
+    </select>
+
+    <button type="submit" class="btn">Add Employee</button>
+  </form>
+
+  <table id="employee-table">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Username</th>
+        <th>Employee ID</th>
+        <th>Role</th>
+        <th>State</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
     
     <!-- Activity Type Management -->
     <div class="card">
