--- a/index.html
+++ b/index.html
@@ -16,8 +16,21 @@
     </form>
   </section>
 
-  <!-- Employee Dashboard -->
-  <section id="employee-dashboard" class="dashboard" style="display: none;"></section>
+ <!-- Employee Dashboard -->
+<section id="employee-dashboard" class="dashboard" style="display: none;">
+  <!-- ... -->
+  <div class="dashboard-sidebar">
+    <div class="card">
+      <h3>Calendar</h3>
+      <div id="calendar"></div>
+      <div id="pay-period-info">
+        <p>Pay Period: <span id="pay-period-dates"></span></p>
+        <p>Next Pay Date: <span id="next-pay-date"></span></p>
+      </div>
+    </div>
+  </div>
+  <!-- ... -->
+</section>
   
   <!-- Supervisor Dashboard -->
   <section id="supervisor-dashboard" class="dashboard" style="display: none;"></section>
