--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <!-- Admin Dashboard -->
   <section id="admin-dashboard" class="dashboard" style="display: none;"></section>
 
+  <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="app.js"></script>
 </body>
 </html>
