--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Login Section -->
-  <section id="login-section">
+  <!-- Login Page -->
+  <section id="login-page">
     <h2>Login</h2>
     <form id="login-form">
       <input type="text" id="username" placeholder="Username" autocomplete="username" required>
@@ -16,22 +16,22 @@
     </form>
   </section>
 
- <!-- Employee Dashboard -->
-<section id="employee-dashboard" class="dashboard" style="display: none;">
-  <!-- ... -->
-  <div class="dashboard-sidebar">
-    <div class="card">
-      <h3>Calendar</h3>
-      <div id="calendar"></div>
-      <div id="pay-period-info">
-        <p>Pay Period: <span id="pay-period-dates"></span></p>
-        <p>Next Pay Date: <span id="next-pay-date"></span></p>
+  <!-- Employee Dashboard -->
+  <section id="employee-dashboard" class="dashboard" style="display: none;">
+    <!-- ... -->
+    <div class="dashboard-sidebar">
+      <div class="card">
+        <h3>Calendar</h3>
+        <div id="calendar"></div>
+        <div id="pay-period-info">
+          <p>Pay Period: <span id="pay-period-dates"></span></p>
+          <p>Next Pay Date: <span id="next-pay-date"></span></p>
+        </div>
       </div>
     </div>
-  </div>
-  <!-- ... -->
-</section>
-  
+    <!-- ... -->
+  </section>
+
   <!-- Supervisor Dashboard -->
   <section id="supervisor-dashboard" class="dashboard" style="display: none;"></section>
 
