--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
     </form>
   </section>
 
-  <!-- Employee Dashboard -->
-  <section id="employee-dashboard" class="dashboard" style="display: none;">
-    <!-- ... -->
+  <!-- Dashboard Section -->
+  <section id="dashboard-section" style="display: none;">
+    <!-- Employee Dashboard -->
+    <section id="employee-dashboard" class="dashboard"></section>
+
+    <!-- Supervisor Dashboard -->
+    <section id="supervisor-dashboard" class="dashboard"></section>
+
+    <!-- Admin Dashboard -->
+    <section id="admin-dashboard" class="dashboard"></section>
   </section>
-
-  <!-- Supervisor Dashboard -->
-  <section id="supervisor-dashboard" class="dashboard" style="display: none;"></section>
-
-  <!-- Admin Dashboard -->
-  <section id="admin-dashboard" class="dashboard" style="display: none;"></section>
 
   <script type="module" src="app.js"></script>
 </body>
