--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </section>
 
   <!-- Dashboard Section -->
-  <section id="dashboard-section" style="display: none;">
+  <section id="dashboard-section">
     <!-- Employee Dashboard -->
     <section id="employee-dashboard" class="dashboard"></section>
 
