--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
     </form>
   </section>
 
-  <!-- Dashboard Section -->
-  <section id="dashboard-section">
-    <!-- Employee Dashboard -->
-    <section id="employee-dashboard" class="dashboard"></section>
+  <!-- Employee Dashboard -->
+  <section id="employee-dashboard" class="dashboard" style="display: none;"></section>
 
-    <!-- Supervisor Dashboard -->
-    <section id="supervisor-dashboard" class="dashboard"></section>
+  <!-- Supervisor Dashboard -->
+  <section id="supervisor-dashboard" class="dashboard" style="display: none;"></section>
 
-    <!-- Admin Dashboard -->
-    <section id="admin-dashboard" class="dashboard"></section>
-  </section>
+  <!-- Admin Dashboard -->
+  <section id="admin-dashboard" class="dashboard" style="display: none;"></section>
 
   <script type="module" src="app.js"></script>
 </body>
