--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
   <section id="employee-dashboard" class="dashboard" style="display: none;"></section>
 
   <!-- Supervisor Dashboard -->
-  <section id="supervisor-dashboard" class="dashboard" style="display: none;"></section>
+  <section id="supervisor-dashboard" class="dashboard" style="display: none;">
+    <!-- Logout button -->
+    <button id="logoutButton">Logout</button>
+  </section>
 
   <!-- Admin Dashboard -->
   <section id="admin-dashboard" class="dashboard" style="display: none;"></section>
 
   <script type="module" src="app.js"></script>
+  <script type="module" src="supervisorDashboard.js"></script> <!-- Include supervisorDashboard.js -->
 </body>
 </html>
