--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
   <section id="employee-dashboard" class="dashboard" style="display: none;"></section>
 
   <!-- Supervisor Dashboard -->
-  <section id="supervisor-dashboard" class="dashboard" style="display: none;">
-    <!-- Logout button -->
-    <button id="logoutButton">Logout</button>
-  </section>
+  <section id="supervisor-dashboard" class="dashboard" style="display: none;"></section>
 
   <!-- Admin Dashboard -->
   <section id="admin-dashboard" class="dashboard" style="display: none;"></section>
 
+  <!-- Include supervisorDashboard.js -->
+  <script type="module" src="supervisorDashboard.js"></script>
+
   <script type="module" src="app.js"></script>
-  <script type="module" src="supervisorDashboard.js"></script> <!-- Include supervisorDashboard.js -->
 </body>
 </html>
