--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,9 +26,7 @@
   <!-- Admin Dashboard -->
   <section id="admin-dashboard" class="dashboard" style="display: none;"></section>
 
-  <!-- Include supervisorDashboard.js -->
   <script type="module" src="supervisorDashboard.js"></script>
-
   <script type="module" src="app.js"></script>
 </body>
 </html>
