--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!-- index.html -->
-
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Time Clock System</title>
@@ -27,14 +25,6 @@
   <!-- Admin Dashboard -->
   <section id="admin-dashboard" class="dashboard" style="display: none;"></section>
 
-  <!-- Include JavaScript files -->
-  <script type="module" src="auth.js"></script>
-  <script type="module" src="employeeDashboard.js"></script>
-  <script type="module" src="adminDashboard.js"></script>
-  <script type="module" src="supervisorDashboard.js"></script>
-  <script type="module" src="timecard.js"></script>
-  <script type="module" src="hoursCalculation.js"></script>
-  <script type="module" src="mealPeriodPolicies.js"></script>
   <script type="module" src="app.js"></script>
 </body>
 </html>
