--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </section>
 
   <!-- Employee Dashboard -->
-  <section id="employee-dashboard" class="dashboard" style="display: none;"></section>
+<section id="employee-dashboard" class="dashboard" style="display: none;">
 
   <!-- Supervisor Dashboard -->
   <section id="supervisor-dashboard" class="dashboard" style="display: none;"></section>
@@ -25,6 +25,10 @@
   <!-- Admin Dashboard -->
   <section id="admin-dashboard" class="dashboard" style="display: none;"></section>
 
+    <!-- ... -->
+  <button id="logout-btn" class="btn">Logout</button>
+</section>
+  
   <script type="module" src="app.js"></script>
 </body>
 </html>
