--- a/index.html
+++ b/index.html
@@ -17,18 +17,23 @@
   </section>
 
   <!-- Employee Dashboard -->
-<section id="employee-dashboard" class="dashboard" style="display: none;">
+  <section id="employee-dashboard" class="dashboard" style="display: none;">
+    <!-- ... -->
+    <button id="logout-btn" class="btn">Logout</button>
+  </section>
 
   <!-- Supervisor Dashboard -->
-  <section id="supervisor-dashboard" class="dashboard" style="display: none;"></section>
+  <section id="supervisor-dashboard" class="dashboard" style="display: none;">
+    <!-- ... -->
+    <button id="logout-btn" class="btn">Logout</button>
+  </section>
 
   <!-- Admin Dashboard -->
-  <section id="admin-dashboard" class="dashboard" style="display: none;"></section>
-
+  <section id="admin-dashboard" class="dashboard" style="display: none;">
     <!-- ... -->
-  <button id="logout-btn" class="btn">Logout</button>
-</section>
-  
+    <button id="logout-btn" class="btn">Logout</button>
+  </section>
+
   <script type="module" src="app.js"></script>
 </body>
 </html>
