--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="container">
     <header>
-      <h1>payrollcriddle's Time Clock System</h1>
+      <h1>Time Clock System</h1>
       <!-- Add any additional header content or navigation menu -->
     </header>
 
