--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2024 Time Clock System. All rights reserved.</p>
+      <p>&copy; 2024 payrollcriddle's Time Clock System. All rights reserved.</p>
       <!-- Add any additional footer content or links -->
     </footer>
   </div>
