--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
     <!-- Supervisor Dashboard -->
     <main id="supervisor-dashboard" class="dashboard" style="display: none;">
       <!-- ... -->
-      <button id="logout-btn" class="btn">Logout</button>
+      <button id="supervisor-logout-btn" class="btn">Logout</button>
     </main>
 
     <!-- Admin Dashboard -->
     <main id="admin-dashboard" class="dashboard" style="display: none;">
       <!-- ... -->
-      <button id="logout-btn" class="btn">Logout</button>
+      <button id="admin-logout-btn" class="btn">Logout</button>
     </main>
 
     <footer>
@@ -83,6 +83,10 @@
       <!-- Add any additional footer content or links -->
     </footer>
   </div>
+
+  <script type="module" src="app.js"></script>
+</body>
+</html>
 
   <script type="module" src="app.js"></script>
 </body>
