--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Time Clock System</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="styles.css">
+    <title>Time Clock System</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A web-based time clock system for tracking employee work hours and generating timecards.">
+    <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="loading" class="loading">Loading...</div>
@@ -83,10 +84,6 @@
       <!-- Add any additional footer content or links -->
     </footer>
   </div>
-
-  <script type="module" src="app.js"></script>
-</body>
-</html>
 
   <script type="module" src="app.js"></script>
 </body>
