--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main id="employee-dashboard" class="dashboard" style="display: none;">
       <div id="welcome-message"></div>
       <div id="current-date-time">
-        <span id="current-time-display"></span>
+        <span id="current-time"></span>
       </div>
       <label for="day-status-dropdown">Day Status:</label>
       <select id="day-status-dropdown">
