--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
     </footer>
   </div>
 
+  <!-- Include adminDashboard.js -->
+  <script type="module" src="adminDashboard.js"></script>
+
+  <!-- Include app.js -->
   <script type="module" src="app.js"></script>
 </body>
 </html>
