--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </div>
 
   <!-- Include adminDashboard.js -->
-  <script type="module" src="adminDashboard.js"></script>
+  <script type="module" src="js/dashboards/adminDashboard.js"></script>
 
   <!-- Include app.js -->
   <script type="module" src="app.js"></script>
