--- a/index.html
+++ b/index.html
@@ -26,7 +26,23 @@
 
     <!-- Employee Dashboard -->
     <main id="employee-dashboard" class="dashboard" style="display: none;">
-      <!-- ... -->
+      <h2 id="welcome-message"></h2>
+      <p id="current-date-time"></p>
+      <select id="day-status-dropdown"></select>
+      <div id="time-clock"></div>
+      <select id="activity-dropdown"></select>
+      <select id="job-dropdown"></select>
+      <div id="leave-hours-section">
+        <select id="leave-type-dropdown"></select>
+        <input type="number" id="leave-hours-input" min="0" step="0.5">
+      </div>
+      <textarea id="timecard-note-input"></textarea>
+      <input type="checkbox" id="meal-period-waiver-checkbox">
+      <table id="daily-hours-table"></table>
+      <div id="weekly-hours-summary"></div>
+      <button id="submit-button">Submit</button>
+      <button id="logout-button">Logout</button>
+      <div id="calendar-container"></div>
     </main>
 
     <!-- Supervisor Dashboard -->
