--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A web-based time clock system for tracking employee work hours and generating timecards.">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/calendar.css">  
 </head>
 <body>
   <div id="loading" class="loading">Loading...</div>
