--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <form id="create-employee-form">
           <input type="text" id="employee-name-input" placeholder="Employee Name" required>
           <input type="email" id="employee-email-input" placeholder="Email Address" required>
+          <input type="text" id="employee-state-input" placeholder="State" required>
           <button type="submit" class="btn">Create Employee</button>
         </form>
         <table id="employee-table">
