--- a/index.html
+++ b/index.html
@@ -158,5 +158,19 @@
 
   <!-- Include app.js -->
   <script type="module" src="app.js"></script>
+    
+  <!-- Include the Calendar class script -->
+    <script src="path/to/calendarFunctions.js"></script>
+
+    <!-- Instantiate the Calendar -->
+    <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const calendarEl = document.getElementById('calendar'); // The ID of your calendar container
+        const payPeriodStartDate = new Date(/* Your start date */);
+        const payPeriodEndDate = new Date(/* Your end date */);
+        new Calendar(calendarEl, payPeriodStartDate, payPeriodEndDate);
+    });
+    </script>
+
 </body>
 </html>
