--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
   <script type="module" src="app.js"></script>
     
 <script type="module">
-  import { Calendar } from 'dashboards/employeeDashboardModules/calendarFunctions.js';
-  import { getPayPeriodStartDate, getPayPeriodEndDate } from 'dashboards/employeeDashboardModules/timesheetFunctions.js'; // Update the path to where timesheetFunctions.js is located
+  import { Calendar } from './dashboards/employeeDashboardModules/calendarFunctions.js';
+  import { getPayPeriodStartDate, getPayPeriodEndDate } from './dashboards/employeeDashboardModules/timesheetFunctions.js'; // Update the path to where timesheetFunctions.js is located
   
   window.addEventListener('DOMContentLoaded', () => {
     const calendarContainer = document.getElementById('calendar-container');
