--- a/index.html
+++ b/index.html
@@ -68,7 +68,34 @@
       <div id="weekly-hours-summary"></div>
       <button id="submit-button">Submit</button>
       <button id="logout-button">Logout</button>
-      <div id="calendar-container"></div>
+      
+      <!-- Updated calendar code -->
+      <div id="calendar-container">
+        <div class="calendar">
+          <div class="calendar-header">
+            <button class="prev-month-button">&lt;</button>
+            <span class="calendar-title">April 2024</span>
+            <button class="next-month-button">&gt;</button>
+          </div>
+          <table class="calendar-table">
+            <thead>
+              <tr>
+                <th>Sunday</th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+                <th>Saturday</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Calendar days will be dynamically populated here -->
+            </tbody>
+          </table>
+        </div>
+      </div>
+      
     </main>
 
     <!-- Supervisor Dashboard -->
