--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <tr>
             <th>Date</th>
             <th>Hours Worked</th>
+            <th>Meal Period Hours</th>
             <th>Leave Hours</th>
             <th>Meal Period Waived</th>
           </tr>
